fix: replace embedded google-java-format with Docker-based formatting
The google-java-format library was eagerly loaded in BetterJavaCodegen's
constructor, which broke the Docker image because the base
openapitools/openapi-generator-cli image ships a JRE without the
jdk.compiler module that google-java-format requires. This caused ALL
generators to fail (not just Java) since ServiceLoader instantiates
every generator at startup.

Switch to the same runFormatterInDocker pattern used by all other
language generators, downloading the google-java-format all-deps JAR
at format time inside an eclipse-temurin JDK container.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>